--- a/style.html
+++ b/style.html
@@ -2969,6 +2969,23 @@
             font-size: 0.85rem;
             color: var(--muted-color);
         }
+        .mov-assinatura-bloco {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .mov-assinatura-preview img {
+            max-height: 72px;
+            max-width: 190px;
+            border: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
+            border-radius: 10px;
+            background: #fff;
+            padding: 6px;
+        }
+        .mov-assinatura-texto {
+            color: var(--text-color);
+            font-weight: 600;
+        }
         .mov-itens-resumo {
             border: 1px dashed color-mix(in srgb, var(--primary-color) 32%, transparent);
             border-radius: 12px;
